# Paper-Trading-Bot

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.draft.md  README.md  pyproject.toml  run_backtest.py  showcase-suggestions.md
.github/workflows/: ci.yml
notebooks/: strategy_exploration.ipynb
src/trading_bot/: bot.py  clients.py  config.py  models.py
src/trading_bot/backtest/: engine.py
src/trading_bot/dashboard/: app.py
src/trading_bot/data/: indicators.py  market_data.py
src/trading_bot/execution/: order_manager.py  portfolio.py
src/trading_bot/strategies/: README.md  __init__.py  base.py  macd.py  mean_reversion.py  ml_strategy.py  rsi.py  sma_crossover.py
tests/: conftest.py  test_backtest.py  test_config.py  test_indicators.py  test_order_manager.py  test_strategies.py
